--- a/myapp/package.json
+++ b/myapp/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.1",
     "typescript": "^4.3.2",
     "uuid": "^8.3.2",
     "vis-react": "^0.5.1",
