--- a/myapp/package.json
+++ b/myapp/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://viannju.github.io/mywebsite",
+  "homepage": "https://tytusdb.github.io/tytusx/20211SVAC/G17",
   "name": "myapp",
   "version": "0.1.0",
   "private": true,
