--- a/myapp/package.json
+++ b/myapp/package.json
@@ -11,9 +11,11 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-3": "^6.24.1",
     "bootstrap": "^5.0.1",
+    "codemirror": "^5.61.1",
     "jison": "^0.4.18",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
+    "react-codemirror2": "^7.2.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
