--- a/myapp/package.json
+++ b/myapp/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.2",
     "react-codemirror2": "^7.2.1",
     "react-dom": "^17.0.2",
+    "react-graph-vis": "^1.0.7",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-select": "^4.3.1",
